Blink Animation: Request serviceOnNextFrame on animation's finish and cancel.

void AnimationTimeline::setOutdatedAnimation(Animation* animation) {
  DCHECK(animation->outdated());
  m_outdatedAnimationCount++;
  m_animationsNeedingUpdate.add(animation);
  if (isActive() && !m_document->page()->animator().isServicingAnimations())
    m_timing->serviceOnNextFrame();
}

AnimationTimeline::setOutdatedAnimation doesn't request
m_timing->serviceOnNextFrame() if animator().isServicingAnimations() (i.e. it is inside the requestAnimationFrame).

Request it explicitly.

BUG=620160

Review-Url: https://codereview.chromium.org/2527043002
Cr-Commit-Position: refs/heads/master@{#434614}

Former-commit-id: e796f22278e322c1b162deb5b6bbe1895b444c2e